RichtextArea: fix submenu not showing at the right position

--- a/client/django-formset/RichtextArea.scss
+++ b/client/django-formset/RichtextArea.scss
@@ -76,7 +76,7 @@
 				}
 				& + ul[role="menu"] {
 					display: none;
-					position: fixed;
+					position: absolute;
 					width: max-content;
 					top: 0;
 					left: 0;
